# Clicklet

./: README.md  cnpjs.txt  dados_cnpj.txt  dados_cnpj.xlsx  db.sqlite3  excel.js  index.js  main.js  package-lock.json  package.json  pyproject.toml  resultado.xlsx
.github/workflows/: release.yml
frontend/public/: index.html
frontend/src/: App.tsx
mobile/: App.tsx
src/: Clicklet.js  settings.py  urls.py
src/converter/: apps.py
src/converter/templates/: index.html
